poistetaan ylimääräiset wrapperit sovellusten ympäriltä

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -42,14 +42,12 @@
 
 </head>
 <body>
-<div id="wrapper">
-    <div>
-        <div id="angularbox" ng-view=""></div>
+    <div id="application-wrapper">
+        <div id="angularbox" ng-view=""></div>        
     </div>
-    <div style="clear:both;"></div>
-</div>
 
-<div ng-controller="LoadingCtrl"><div ng-show="loading" style="position: fixed; left: 0px; top: 0px; display: none; background: gold; padding: 0.3em; font-weight: bold;">käsitellään...</div></div>
+
+    <div ng-controller="LoadingCtrl"><div ng-show="loading" style="position: fixed; left: 0px; top: 0px; display: none; background: gold; padding: 0.3em; font-weight: bold;">käsitellään...</div></div>
 </body>
 
 </html>
