--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="valintaperusteet">
 
-<head>
+<head>  
     <title>Valintaperusteiden mallinnus</title>
 
     <!-- libs -->
@@ -23,7 +23,13 @@
     <script type="text/javascript" src="../js/valintatapajono.js"></script>
     <script type="text/javascript" src="../js/jarjestyskriteeri.js"></script>
     <script type="text/javascript" src="../js/directives.js"></script>
-    <script type="text/javascript" src="../js/laskentakaava.js"></script>
+    
+    <script type="text/javascript" src="../js/laskentakaavat/laskentakaavadomain.js"></script>
+    <script type="text/javascript" src="../js/laskentakaavat/laskentakaavaresources.js"></script>
+    <script type="text/javascript" src="../js/laskentakaavat/laskentakaavamenu.js"></script>
+    <script type="text/javascript" src="../js/laskentakaavat/laskentakaavalista.js"></script>
+    <script type="text/javascript" src="../js/laskentakaavat/laskentakaava.js"></script>
+    
     <script type="text/javascript" src="../js/valintaryhmavalinnanvaihe.js"></script>
     <script type="text/javascript" src="../js/loading.js"></script>
     <script type="text/javascript" src="../js/valintakoe.js"></script>
