--- a/src/main/webapp/html/valintaryhmachildren.html
+++ b/src/main/webapp/html/valintaryhmachildren.html
@@ -1,10 +1,10 @@
-<h3>Valintaryhmän muokkaus</h3>
+<h1>Valintaryhmän muokkaus</h1>
 
 
 <div class="tabs">
 	<a href="#/valintaryhma/{{model.valintaryhma.oid}}/" class="tab"><span>Valintaryhmän perustiedot</span></a>
 	<a href="#/valintaryhma/{{model.valintaryhma.oid}}/sisaltyvat/" class="tab current"><span>Sisältyvät hakukohteet/valintaryhmät</span></a>
-	<!-- <a href="#/valinnanvaihe/:id/laskentakaava" class="tab"><span>Laskentakaavat</span></a>    -->
+	<a href="#/valintaryhma/{{model.valintaryhma.oid}}/laskentakaava/" class="tab"><span>Laskentakaavat</span></a>
 </div>
 <div class="tabsheets">
 
