hakukohteille lisätty laskentakaavojen lisäys ja tulostus

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -29,6 +29,7 @@
     <script type="text/javascript" src="../js/laskentakaavat/laskentakaavamenu.js"></script>
     <script type="text/javascript" src="../js/laskentakaavat/laskentakaavalista.js"></script>
     <script type="text/javascript" src="../js/laskentakaavat/laskentakaava.js"></script>
+    <script type="text/javascript" src="../js/laskentakaavat/hakukohdelaskentakaavalista.js"></script>
     
     <script type="text/javascript" src="../js/valintaryhmavalinnanvaihe.js"></script>
     <script type="text/javascript" src="../js/loading.js"></script>
