--- a/src/main/webapp/html/hakukohdelomake.html
+++ b/src/main/webapp/html/hakukohdelomake.html
@@ -1,10 +1,10 @@
 ﻿<h1>Hakukohteen muokkaus</h1>
 
-
 <div class="tabs">
-    <a href="#/valintaryhma/{{model.valintaryhma.oid}}/" class="tab current"><span>Hakukohteen perustiedot</span></a>
-    <a ng-show="model.hakukohde.valintaryhma_id" href="#/valintaryhma/{{model.hakukohde.valintaryhma_id}}/laskentakaava" class="tab"><span>Laskentakaavat</span></a>
+    <a href="#/hakukohde/{{model.hakukohde.oid}}/" class="tab current"><span>Hakukohteen perustiedot</span></a>
+    <a ng-show="model.hakukohde" href="#/hakukohde/{{model.hakukohde.oid}}/laskentakaava" class="tab"><span>Laskentakaavat</span></a>
 </div>
+
 
 
 <div class="tabsheets">
