--- a/src/main/webapp/html/valintaryhmalomake.html
+++ b/src/main/webapp/html/valintaryhmalomake.html
@@ -62,7 +62,7 @@
         <div class="clear"></div>
     </div>
 
-    <div class="form-row ">
+    <div class="form-row" ng-show="model.valintaryhma.oid" >
         <label class="form-row-label">Lisää hakukohdekoodi</label>
         <div class="form-row-content width-60">
             <input class="width-60" name="hakukohdekoodit" type="text" id="uusiHakukohdeUri" ng-model="uusiHakukohdeUri" list="hakukohdekoodit"/>
