Muutettu "peruuta" => takaisin teksti

--- a/src/main/webapp/html/valintaryhmalomake.html
+++ b/src/main/webapp/html/valintaryhmalomake.html
@@ -118,7 +118,7 @@
     <div class="clear"></div>
 
     <button ng-disabled="!form.$valid" class="button small primary" type="submit">Tallenna</button>
-	<button type="button" class="float-left margin-right-1 button small" ng-click="cancel()">Peruuta</button>
+	<button type="button" class="float-left margin-right-1 button small" ng-click="cancel()">Takaisin</button>
 	
 
 </form>
