--- a/src/main/webapp/html/valintatapajono.html
+++ b/src/main/webapp/html/valintatapajono.html
@@ -48,6 +48,17 @@
             -->
         </div>
 
+        <label class="form-row-label" for="kuvaus">Ei varasijatayttoa</label>
+        <div class="form-row-content">
+            <div class="field-container-checkbox">
+                <input type="checkbox" name="siirretaanSijoitteluun" ng-model="model.valintatapajono.eiVarasijatayttoa" >
+                <label>&#8302;</label>
+            </div>
+            <!--
+            <div><small>ohjeteksti.</small></div>
+            -->
+        </div>
+
         <div class="clear"></div>
 
         <div class="form-row-label">Tasasijasääntö</div>
