Ei varasijoijen sijoittelua rajapintamuutokset

--- a/src/main/webapp/html/valintatapajono.html
+++ b/src/main/webapp/html/valintatapajono.html
@@ -55,7 +55,7 @@
 
         <div class="form-row-content">
             <div class="field-container-checkbox">
-                <input type="checkbox" name="siirretaanSijoitteluun" ng-model="model.valintatapajono.eiVarasijatayttoa">
+                <input type="checkbox" name="eiVarasijatayttoa" ng-model="model.valintatapajono.eiVarasijatayttoa">
                 <label>&#8302;</label>
             </div>
             <!--
