Tuki "ei varasijatäyttöä" toiminnolle

--- a/src/main/webapp/html/valintatapajono.html
+++ b/src/main/webapp/html/valintatapajono.html
@@ -51,6 +51,8 @@
             -->
         </div>
 
+        <div class="clear"></div>
+
         <label class="form-row-label" for="kuvaus">Ei varasijatayttoa</label>
 
         <div class="form-row-content">
@@ -58,9 +60,14 @@
                 <input type="checkbox" name="eiVarasijatayttoa" ng-model="model.valintatapajono.eiVarasijatayttoa">
                 <label>&#8302;</label>
             </div>
-            <!--
-            <div><small>ohjeteksti.</small></div>
-            -->
+
+            <div>
+                    <small>
+                            Jos valittu, sijoittelu pyrkii ainoastaan valitsemaan aloituspaikkojen mukaisen määrän jonon alusta,
+                            jättäen hylätyt huomioimatta. Varasijoille jääviä ei huomioida.
+                    </small>
+            </div>
+
         </div>
 
         <div class="clear"></div>
