UI-parannuksia valintaryhmien hallintaan. Valintakoekoodien poistamisen bugi korjattu...

--- a/src/main/webapp/html/valintaryhmalomake.html
+++ b/src/main/webapp/html/valintaryhmalomake.html
@@ -39,7 +39,7 @@
 
         <!-- VALINTAKOEKOODIEN LISTAUS -->
         <div ng-show="model.valintaryhma.valintakoekoodit" class="form-row">
-            <label class="form-row-label" for="">Hakukohde koodit</label>
+            <label class="form-row-label" for="">Valintakoekoodit</label>
 
             <div class="form-row-content">
                 <table class="virkailija-table-1 width-60">
