fullmatchfiltterit lisätty. hakukohde/valintakoekoodilistasta poistetaan ne koodit, jotka valintaryhmällä jo on

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="../js/valintatapajono.js"></script>
     <script type="text/javascript" src="../js/jarjestyskriteeri.js"></script>
     <script type="text/javascript" src="../js/directives.js"></script>
+    <script type="text/javascript" src="../js/filters.js"></script>
     
     <script type="text/javascript" src="../js/laskentakaavat/laskentakaavadomain.js"></script>
     <script type="text/javascript" src="../js/laskentakaavat/laskentakaavaresources.js"></script>
