--- a/src/main/webapp/html/valintaryhmalomake.html
+++ b/src/main/webapp/html/valintaryhmalomake.html
@@ -87,7 +87,7 @@
                     <input class="width-60 ac-filter search" type="text" placeholder="Suodata valintakoekoodeja" ng-model="valintakoekoodifilter" />                         
 
                     <ul class="ac-options" ng-show="model.valintakoekoodit">
-                        <li fl-option="{{valintakoekoodi.koodiUri}}" class="ac-option" ng-click="setHakukohdeUri()" ng-repeat="valintakoekoodi in model.valintakoekoodit | filter:valintakoekoodifilter">
+                        <li fl-option="{{valintakoekoodi.koodiUri}}" class="ac-option" ng-click="setHakukohdeUri()" ng-repeat="valintakoekoodi in model.valintakoekoodit | filter:valintakoekoodifilter | valintakoekoodiFullMatchFilter">
                             <span>{{valintakoekoodi.metadata[0].nimi}}</span>
                             <span class="float-right">{{valintakoekoodi.koodiUri}}</span>
                         </li> 
@@ -155,10 +155,8 @@
 
                     <input class="width-60 ac-filter search" type="text" placeholder="Suodata hakukohdekoodeja" ng-model="hakukohdekoodifilter" />
 
-                        
-
                     <ul class="ac-options" ng-show="model.hakukohdekoodit">
-                        <li fl-option="{{hakukohdekoodi.koodiUri}}" class="ac-option" ng-click="setHakukohdeUri()" ng-repeat="hakukohdekoodi in model.hakukohdekoodit | filter:hakukohdekoodifilter">
+                        <li fl-option="{{hakukohdekoodi.koodiUri}}" class="ac-option" ng-click="setHakukohdeUri()" ng-repeat="hakukohdekoodi in model.hakukohdekoodit | filter:hakukohdekoodifilter | hakukohdekoodiFullMatchFilter">
                             <span>{{hakukohdekoodi.metadata[0].nimi}}</span>
                             <span class="float-right">{{hakukohdekoodi.koodiUri}}</span>
                         </li> 
