--- a/src/main/webapp/html/jarjestyskriteeri.html
+++ b/src/main/webapp/html/jarjestyskriteeri.html
@@ -5,7 +5,7 @@
         <label class="form-row-label" for="metatiedot">Metatiedot</label>
 
         <div class="form-row-content">
-            <input type="text" name="metatiedot" id="metatiedot" ng-model="model.jarjestyskriteeri.metatiedot" required />
+            <input type="text" name="metatiedot" id="metatiedot" ng-model="model.jarjestyskriteeri.metatiedot" />
             <!--
             <div><small>Jonon nimeen liittyvä ohjeteksti.</small></div>
             -->
