--- a/src/main/webapp/html/valintakoevalinnanvaihelomake.html
+++ b/src/main/webapp/html/valintakoevalinnanvaihelomake.html
@@ -1,4 +1,4 @@
-<h1>Valintakoevalinnanvaiheen muokkaus</h1>
+<h1>{{'koekutsuvaihe.header' | i18n}}</h1>
 
 <form name="form" ng-submit="submit()">
 
