--- a/src/main/webapp/html/valintatapajono.html
+++ b/src/main/webapp/html/valintatapajono.html
@@ -1,4 +1,4 @@
-﻿<h1>Jonon muokkaus</h1>
+﻿<h1>{{'jononmuokkaus.header' | i18n}}</h1>
 
 <form name="form" ng-submit="submit()">
     <div class="form-row">
@@ -38,7 +38,7 @@
 
         <div class="clear"></div>
 
-        <label class="form-row-label" for="kuvaus">Siiretään sijoitteluun</label>
+        <label class="form-row-label" for="kuvaus">{{'jononmuokkaus.siirretaan.sijoitteluun' | i18n}}</label>
 
         <div class="form-row-content">
             <div class="field-container-checkbox">
