--- a/src/main/webapp/html/valintaryhmalomake.html
+++ b/src/main/webapp/html/valintaryhmalomake.html
@@ -195,8 +195,8 @@
                             <a ng-class="{true:'', false:'line-through'}[data.aktiivinen]"
                                ng-href="#/valintaryhma/{{model.valintaryhma.oid}}/{{model.getValinnanvaiheType(data)}}/{{data.oid}}">{{data.nimi}}</a>
                         </td>
-                        <td class="align-center">{{data.inheritance}}</td>
-                        <td class="align-center">{{data.valinnanVaiheTyyppi}}</td>
+                        <td class="align-center">{{'valintaperusteet.periytyy.' + data.inheritance | i18n}}</td>
+                        <td class="align-center">{{'valintaperusteet.tyyppi.' + data.valinnanVaiheTyyppi | i18n}}</td>
                         <td class="align-center">
                             <span ng-hide="data.inheritance" class="btn remove"
                                   ng-click="model.removeValinnanvaihe(data)"></span>
@@ -209,8 +209,8 @@
                 <div class="clear"></div>
 
                 <div ng-show="model.valintaryhma.oid" class="form-row">
-                    <span type="button" class="button small" ng-click="lisaaValinnanVaihe()">Lisää valinnanvaihe</span>
-                    <span type="button" class="button small" ng-click="lisaaValintakoeValinnanVaihe()">Lisää valintakoevalinnanvaihe</span>
+                    <span type="button" class="button small" ng-click="lisaaValinnanVaihe()">{{'valintaryhmalomake.add.valinnanvaihe' | i18n}}</span>
+                    <span type="button" class="button small" ng-click="lisaaValintakoeValinnanVaihe()">{{'valintaryhmalomake.add.koekutsuvaihe' | i18n}}</span>
                 </div>
             </div>
         </div>
