Syöteparametrien tallennus toimimaan.

--- a/src/main/webapp/html/laskentakaava/laskentakaavalomake.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavalomake.html
@@ -142,17 +142,17 @@
 
 <!-- Arvojen syöttö -templatet -->
 <script type="text/ng-template" id="desimaaliluku-template">
-    <input type="text" size="9" step="0.1" ng-model="param.data.arvo"/>
+    <input type="text" size="9" ng-model="param.data.arvo"/>
 </script>
 <script type="text/ng-template" id="kokonaisluku-template">
-    <input type="text" size="9" step="1" ng-model="param.data.arvo"/>
+    <input type="text" size="9" ng-model="param.data.arvo"/>
 </script>
 <script type="text/ng-template" id="totuusarvo-template">
-    <input type="radio" size="9" step="1" ng-model="param.data.arvo" value="true"/> Tosi
-    <input type="radio" size="9" step="1" ng-model="param.data.arvo" value="false"/> Epätosi
+    <input type="radio" size="9" ng-model="param.data.arvo" value="true"/> Tosi
+    <input type="radio" size="9" ng-model="param.data.arvo" value="false"/> Epätosi
 </script>
 <script type="text/ng-template" id="merkkijono-template">
-    <input type="text" size="9" step="1" ng-model="param.data.arvo"/>
+    <input type="text" size="9" ng-model="param.data.arvo"/>
 </script>
 
 <script type="text/ng-template" id="arvovalikonvertteri-template">
