VT-467 hakukohdelinkki korjattu

--- a/src/main/webapp/html/valintaryhmatlistaus.html
+++ b/src/main/webapp/html/valintaryhmatlistaus.html
@@ -18,7 +18,7 @@ ng-click="expandNode(data)">​</span>
 </script>
 <script type="text/ng-template" id="hakukohde_leaf.html">
 <span class="icon hakukohde file ng-scope">​</span>
-<div class="label ng-scope"><a href="#/valintaryhma/{{data.oid}}"> {{data.nimi}}</a></div>
+<div class="label ng-scope"><a href="#/hakukohde/{{data.oid}}"> {{data.nimi}}</a></div>
 </script>
 
 
